add title and style

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <html>
   <head>
+    <title>Ape BG Remover</title>
     <script src="https://www.lactame.com/lib/image-js/0.21.2/image.min.js"></script>
+    <style>
+      body {
+        font-family: sans-serif;
+        padding-left: 1rem
+      }
+    </style>
   </head>
 
   <body>
     <div>
-      <label>Enter Ape ID:</label
-      ><input id="apeIdTxt" value="0" type="number" min="0" max="9999" />
+      <h2>Ape Background Remover</h2>
+    </div>
+    <div>
+      <label>Enter Ape ID:</label>
+      <input id="apeIdTxt" value="0" type="number" min="0" max="9999" />
       <button id="processBtn">Process</button>
     </div>
     <div>
