--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <button id="processBtn">Process</button>
     </div>
     <div>
-      <img id="result" />
+      <img id="result" width="400" />
     </div>
     <script>
       async function process() {
