--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       async function process() {
         const apeId = document.getElementById("apeIdTxt").value;
-        const imageUri = `https://bafybeia2c4eilxaoq53fzjkhkz6trfgvhkc3xqu4dk3kinj4mgs3nxs4cm.ipfs.dweb.link/${apeId}.png`;
+        const imageUri = `https://ipfs.io/ipfs/QmQ6VgRFiVTdKbiebxGvhW3Wa3Lkhpe6SkWBPjGnPkTttS/${apeId}.png`;
 
         let image = await IJS.Image.load(imageUri);
 
