use dweb.link instead of ipfs.io

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       async function process() {
         const apeId = document.getElementById("apeIdTxt").value;
-        const imageUri = `https://ipfs.io/ipfs/QmQ6VgRFiVTdKbiebxGvhW3Wa3Lkhpe6SkWBPjGnPkTttS/${apeId}.png`;
+        const imageUri = `https://dweb.link/ipfs/QmQ6VgRFiVTdKbiebxGvhW3Wa3Lkhpe6SkWBPjGnPkTttS/${apeId}.png`;
 
         let image = await IJS.Image.load(imageUri);
 
